fix: disabled primary button in dark mode

--- a/src/renderer/scss/component/_button.scss
+++ b/src/renderer/scss/component/_button.scss
@@ -74,8 +74,7 @@
     }
   }
 
-  &.btn--disabled:disabled {
-    // wtf?
+  &:disabled {
     cursor: default;
 
     &.btn--primary {
