--- a/src/renderer/scss/themes/_dark.scss
+++ b/src/renderer/scss/themes/_dark.scss
@@ -82,9 +82,18 @@ html[data-theme='dark'] {
     background-color: rgba($lbry-red-1, 0.1);
   }
 
-  .btn.btn--alt:not(:disabled) {
-    background-color: rgba($lbry-white, 0.1);
-    color: $lbry-gray-1;
+  //
+  // BUTTON
+  //
+  .btn {
+    &.btn--alt:not(:disabled) {
+      background-color: rgba($lbry-white, 0.1);
+      color: $lbry-gray-1;
+    }
+
+    &.btn--primary:disabled {
+      background-color: rgba($lbry-teal-5, 0.15);
+    }
   }
 
   .search__top {
